--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Frappe Accounting</title>
+    <% if (htmlWebpackPlugin.options.nodeModules) { %>
+    <script>
+      require('module').globalPaths.push('<%= htmlWebpackPlugin.options.nodeModules.replace(/\\/g, '\\\\') %>')
+    </script>
+    <% } %>
 </head>
 <body>
     <div id="app"></div>
