refactor: mounting behaviour for toasts and app

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
     <noscript>
       <strong>We're sorry but Frappe Books doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <!-- built files will replace body.innerHTML -->
   </body>
 </html>
