--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Frappe Books</title>
-    <% if (htmlWebpackPlugin.options.nodeModules) { %>
-    <script>
-      require('module').globalPaths.push('<%= htmlWebpackPlugin.options.nodeModules.replace(/\\/g, '\\\\') %>')
-    </script>
-    <% } %>
-</head>
-<body>
-</body>
+  </head>
+  <body>
+    <!-- Add a loading spinner or something -->
+  </body>
+  <script type="module" src="./renderer.ts"></script>
 </html>
