chore: add lint workflow - fix filter issue in List.vue - update readme with inspect notes - fix log_creds.txt path for dev

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Frappe Books</title>
   </head>
-  <body>
-    <!-- Add a loading spinner or something -->
-  </body>
+  <body></body>
   <script type="module" src="./renderer.ts"></script>
 </html>
